update: url image and clean code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@hooks/*": ["hooks/*"],
       "@contexts/*": ["contexts/*"],
       "@lib/*": ["lib/*"],
+      "@utils/*": ["utils/*"],
       "@services/*": ["services/*"],
       "@types/*": ["types/*"]
     }
