--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jose": "^6.1.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.25",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19",
