--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "baseUrl": "./src",
     "paths": {
+      "@app/*": ["app/*"],
       "@components/*": ["components/*"],
       "@components/client/*": ["components/client/*"],
       "@components/admin/*": ["components/admin/*"],
