--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
    "dependencies": {
       "@ckeditor/ckeditor5-build-classic": "^44.1.0",
       "@ckeditor/ckeditor5-react": "^9.4.0",
+      "@vercel/speed-insights": "^1.2.0",
       "ckeditor5": "^44.1.0",
+      "critters": "^0.0.23",
       "jose": "^6.1.2",
       "js-cookie": "^3.0.5",
+      "lottie-react": "^2.4.1",
       "lucide-react": "^0.553.0",
       "next": "16.0.1",
       "react": "19.2.0",
