update api and add search , update home , detail , fix ux ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@components/*": ["components/*"],
       "@components/client/*": ["components/client/*"],
       "@components/admin/*": ["components/admin/*"],
-
+      "@data/*": ["data/*"],
       "@hooks/*": ["hooks/*"],
       "@contexts/*": ["contexts/*"],
       "@lib/*": ["lib/*"],
