--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.1.0",
@@ -19,6 +20,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "^16.0.7",
+    "next-sitemap": "^4.2.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
